Make Exploits optional dependency

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,8 +3,7 @@ description: Custom, dynamic ore generation
 author: StarTux
 version: 0.1
 main: com.winthier.ore.OrePlugin
-depend: [ Exploits ]
-softdepend: [ Multiverse-Core ]
+softdepend: [ Exploits, Multiverse-Core ]
 commands:
   ore:
     description: Admin interface
